klar med savedcourses

--- a/Web-App-Mvc-Presentation/Views/Auth/Details.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Auth/Details.cshtml
@@ -28,7 +28,7 @@
                     <a class="@((currentAction == "Security") ? "btn-theme active" : "btn-theme")" asp-controller="Auth" asp-action="Security"><i class="fa-regular fa-lock"></i>Security</a>
                 </div>
                 <div class="btn">
-                    <a class="btn-theme" asp-controller="Account" asp-action="SavedItems"><i class="fa-regular fa-bookmark"></i></i>Saved Courses</a>
+                    <a class="btn-theme" asp-action="Join" asp-controller="Courses"><i class="fa-regular fa-bookmark"></i></i>Saved Courses</a>
                 </div>
                 <div class="btn">
                     <a class="btn-theme" asp-controller="Auth" asp-action="Logout"><i class="fa-regular fa-lock"></i>Sign Out</a>
