--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
@@ -1,5 +1,33 @@
 #courses {
     .container {
+
+        .alert-success {
+            text-align: center;
+            background-color: lightgreen;
+            padding: 5px;
+            border-radius: 30px;
+            margin: 10px;
+            border: 1px solid gray;
+        }
+
+        .alert-danger {
+            text-align: center;
+            background-color: lightcoral;
+            padding: 5px;
+            border-radius: 30px;
+            margin: 10px;
+            border: 1px solid gray;
+        }
+
+        .alert-warning {
+            text-align: center;
+            background-color: lightyellow;
+            padding: 5px;
+            border-radius: 30px;
+            margin: 10px;
+            border: 1px solid gray;
+        }
+
         .side-selection {
             display: Flex;
             justify-content: center;
@@ -28,7 +56,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 30px;
-
+            position: relative;
 
             .box-link {
                 flex: 0 0 calc(33.33% - 20px);
@@ -46,6 +74,29 @@
                 padding: 0px;
                 border-radius: 10px;
 
+                .image-to-course {
+                    position: relative;
+                    z-index: -1;
+
+                    img {
+                        z-index: 0;
+                    }
+
+                    a {
+                        cursor: pointer;
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                        z-index: 1000;
+                        color: red;
+                    }
+
+                    i {
+                        color: red;
+                    }
+                }
+
+
                 .content-mat {
                     padding-left: 20px;
                     padding-right: 20px;
@@ -54,10 +105,25 @@
 
 
                 .marks {
+                    background-color: transparent;
+                    border: none;
                     position: absolute;
                     right: 15px;
                     top: 15px;
                     z-index: 10;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+
+
+                    i:hover {
+                        color: green;
+                    }
+                }
+
+                .marks:hover {
+                    background-color: lightgreen;
+                    cursor: pointer;
                 }
 
                 .badge {
@@ -116,6 +182,65 @@
 
             form {
                 padding: 10px;
+                display: flex;
+
+
+
+                .input-search-group {
+                    padding-left: 20px;
+                    position: relative;
+
+
+                    input {
+                        min-width: 300px;
+                        position: relative;
+                        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                        font-weight: 400;
+                        padding: 8px 16px;
+                        border-radius: 10px;
+                        border: 1px solid lightgray;
+                        height: 27px;
+                    }
+
+                    i {
+                        position: absolute;
+                        top: 5px;
+                        right: 1rem;
+                    }
+                }
+
+                .select {
+                    min-width: 300px;
+                    position: relative;
+
+                    .selected {
+                        font-weight: 400;
+                        padding: 8px 16px;
+                        border-radius: 10px;
+                        border: 1px solid lightgray;
+                        cursor: pointer;
+                    }
+                }
+
+                .select-options {
+                    display: none;
+                    position: absolute;
+                    top: 100%;
+                    left: 0;
+                    right: 0;
+                    background-color: white;
+                    border: 1px solid lightgray;
+                    z-index: 10;
+
+                    .options {
+                        padding: 10px;
+                        cursor: pointer;
+                    }
+
+                    .option:hover {
+                        background-color: gray;
+                    }
+                }
             }
         }
 
