--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/_sections.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/_sections.scss
@@ -16,3 +16,4 @@
 @import './sections/_security.scss';
 @import './sections/_saveditems.scss';
 @import './sections/_pagenotfound.scss';
+@import './sections/_admin.scss';
