--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_contacts.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_contacts.scss
@@ -2,6 +2,7 @@
     background-color: $theme-opacity;
     position: relative;
 
+
     .map {
         position: relative;
         z-index: 1;
@@ -22,7 +23,7 @@
             .info {
                 position: relative;
                 z-index: 0;
-                padding-right: 70px;
+                padding-right: 150px;
                 padding-top: 30px;
                 padding-bottom: 30px;
 
@@ -48,10 +49,9 @@
 
 
             form {
-                position: absolute;
-                z-index: 10;
+                background-color: white;
                 box-shadow: 5px 5px 10px rgba(190, 190, 190, 0.5);
-                padding: 80px;
+                padding: 50px 30px 50px 30px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -72,8 +72,10 @@
                     text-align: center;
                 }
 
-                h1 {
-                    padding-bottom: 30px;
+                h3 {
+                    padding-bottom: 10px;
+                    margin-bottom:0px;
+                    
                 }
 
                 .sign-in-here:hover {
