--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
@@ -149,6 +149,33 @@
             }
         }
 
+        .pagination {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+
+            .number {
+                display: inline-block;
+                padding: 8px 12px;
+                margin-right: 5px;
+                border: 1px solid #ccc;
+                color: #333;
+                text-decoration: none;
+                border-radius: 5px;
+                transition: background-color 0.3s ease;
+
+                &.active {
+                    background-color: lightslategray;
+                    color: #fff;
+                    border: 1px solid lightslategray;
+                }
+
+                &:hover {
+                    background-color: lightslategray;
+                }
+            }
+        }
+
         .navigation {
             a {
                 padding-right: 10px;
