--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_contacts.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_contacts.scss
@@ -74,8 +74,7 @@
 
                 h3 {
                     padding-bottom: 10px;
-                    margin-bottom:0px;
-                    
+                    margin-bottom: 0px;
                 }
 
                 .sign-in-here:hover {
@@ -100,7 +99,7 @@
 
                         .input-group-flex {
                             display: flex;
-                            justify-content: space-between
+                            justify-content: space-between;
                         }
                     }
 
@@ -108,11 +107,17 @@
                         border-radius: 10px;
                         padding: 10px;
                         border: 1px solid rgb(207, 207, 207);
+                        height: 30px;
+                        font-family: manrope;
                     }
+
+
 
                     textarea {
                         border: 1px solid rgb(207, 207, 207);
                         border-radius: 10px;
+                        font-family: manrope;
+                        color: lightgray;
                     }
 
                     label {
