--- a/Web-App-Mvc-Presentation/Views/Shared/_Layout.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
 
 
-
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script src="https://kit.fontawesome.com/686402c9d7.js" crossorigin="anonymous"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     
