--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_accountdetail.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_accountdetail.scss
@@ -93,10 +93,12 @@
                 .first-group {
                     display: flex;
 
-                    .input-group{
-                        margin-right:15px;
-                        input{
-                            height:25px;
+                    .input-group {
+                        margin-right: 15px;
+                        width: 100%;
+
+                        input {
+                            height: 35px;
                         }
                     }
                 }
@@ -123,13 +125,15 @@
 
                         .cancel {
                             padding-right: 20px;
-                            button{
-                                height:44px;
+
+                            button {
+                                height: 44px;
                             }
                         }
-                        .save{
-                            button{
-                                height:44px;
+
+                        .save {
+                            button {
+                                height: 44px;
                             }
                         }
                     }
@@ -142,7 +146,9 @@
 
                         .input-group-flex {
                             display: flex;
-                            justify-content: space-between
+                            justify-content: space-between;
+
+                            
                         }
 
                         .input-validation-error {
@@ -156,6 +162,7 @@
                         padding: 10px;
                         border: 1px solid rgb(207, 207, 207);
                         width: 100%;
+                        height: 35px;
                     }
 
                     label {
