--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_admin.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_admin.scss
@@ -1,56 +1,14 @@
-﻿/*body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+﻿#admin {
+    .container {
+        
+        .btn-submit {
+            
+            
+            display:flex;
+            justify-content:center;
+            align-items:center;
 
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+         
+        }
+    }
 }
-
-h1 {
-    text-align: center;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-th, td {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    text-align: left;
-}
-
-th {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #f9f9f9;
-}
-
-.btn {
-    display: inline-block;
-    padding: 8px 16px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
-*/
