--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_security.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_security.scss
@@ -26,7 +26,7 @@
                         color: #FFFFFF;
                         padding-top: 10px;
                         padding-bottom: 13px;
-                        text-align:center;
+                        text-align: center;
                     }
 
                     a {
@@ -94,6 +94,14 @@
                     .btn-submit {
                         display: flex;
                         width: 100%;
+
+                        .btn-theme {
+                            height: 35px;
+                        }
+
+                        .button {
+                            height: 35px;
+                        }
                     }
 
 
@@ -108,6 +116,7 @@
                         border-radius: 10px;
                         padding: 10px;
                         border: 1px solid rgb(207, 207, 207);
+                        height: 35px;
                     }
 
                     label {
@@ -129,8 +138,10 @@
                 .btn-delete {
                     margin-top: 30px;
 
+
                     .btn-theme {
                         background-color: red;
+                        height: 35px;
 
                         &:hover {
                             background-color: black;
