--- a/Web-App-Mvc-Presentation/wwwroot/css/site.css
+++ b/Web-App-Mvc-Presentation/wwwroot/css/site.css
@@ -60,9 +60,6 @@
 :root.dark span {
   color: white;
 }
-:root.dark input {
-  color: white;
-}
 :root.dark a.btn-social {
   background-color: #33354D;
 }
@@ -1118,9 +1115,10 @@ footer .container .social-media {
 }
 #account-detail .container .right-side form .first-group .input-group {
   margin-right: 15px;
+  width: 100%;
 }
 #account-detail .container .right-side form .first-group .input-group input {
-  height: 25px;
+  height: 35px;
 }
 #account-detail .container .right-side form .content .btn-submit {
   display: flex;
@@ -1162,6 +1160,7 @@ footer .container .social-media {
   padding: 10px;
   border: 1px solid rgb(207, 207, 207);
   width: 100%;
+  height: 35px;
 }
 #account-detail .container .right-side form .content label {
   padding-bottom: 5px;
@@ -1951,6 +1950,12 @@ footer .container .social-media {
   display: flex;
   width: 100%;
 }
+#security .container .right-side form .content .btn-submit .btn-theme {
+  height: 35px;
+}
+#security .container .right-side form .content .btn-submit .button {
+  height: 35px;
+}
 #security .container .right-side form .content .input-group {
   padding: 10px;
   display: flex;
@@ -1961,6 +1966,7 @@ footer .container .social-media {
   border-radius: 10px;
   padding: 10px;
   border: 1px solid rgb(207, 207, 207);
+  height: 35px;
 }
 #security .container .right-side form .content label {
   padding-bottom: 10px;
@@ -1976,6 +1982,7 @@ footer .container .social-media {
 }
 #security .container .right-side .deleted .btn-delete .btn-theme {
   background-color: red;
+  height: 35px;
 }
 #security .container .right-side .deleted .btn-delete .btn-theme:hover {
   background-color: black;
@@ -2071,59 +2078,8 @@ footer .container .social-media {
   margin-top: 30px;
 }
 
-/*body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+#admin .container .btn-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    text-align: center;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-th, td {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    text-align: left;
-}
-
-th {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #f9f9f9;
-}
-
-.btn {
-    display: inline-block;
-    padding: 8px 16px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
-*/
